--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="three.r134.min.js"></script>
+<script src="vanta.net.min.js"></script>
   </body>
 </html>
